# mish

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  AUDIT.md  CLASSIFIER.md  DECOMPOSE_PROMPT.md  DEDUP.md  ENRICH.md  GRAMMARS.md  METRICS.md  PREFLIGHT.md  PROXY.md  SHOWCASE.md  SPEC.md  STREAMING.md  VERBOSITY.md  mish_spec.md
docs/assets/: mish-brandkit-final.html
docs/plans/: 2026-03-01-pty-test-stabilization-design.md  2026-03-01-pty-test-stabilization.md  2026-03-04-swebench-experiment-design.md  2026-03-04-swebench-experiment.md  2026-03-04-swebench-prompt-strategy.md  2026-03-05-swebench-v2-results.md  2026-03-06-mish-microkernel.md  2026-03-06-vt100-dedicated-pty.md  haystack-architecture.drawio
grammars/: ansible.toml  apt.toml  brew.toml  cargo.toml  cat.toml  curl.toml  docker.toml  gcc.toml  git.toml  go.toml  head.toml  jest.toml  kubectl.toml  make.toml  npm.toml  pip.toml  pytest.toml  python3.toml  rsync.toml  rustc.toml  sed.toml  ssh.toml  systemctl.toml  terraform.toml  webpack.toml
grammars/_meta/: categories.toml  dangerous.toml  packages.toml
scripts/: mcp-dev.sh
site/: CNAME  index.html  install.sh
src/: config.rs  config_loader.rs  lib.rs  main.rs  safety.rs  shutdown.rs  util.rs
src/audit/: logger.rs
tests/: bun_mcp_diagnostic.js  claude_code_compat.rs  cli_integration.rs  fixture_pipeline_tests.rs  grammar_tests.rs  mcp_integration.rs  pty_env_diagnostic.rs  smoke_mcp.py  stdout_contamination.rs
(+116 files in other folders)
