[package]
name = "mish"
version = "0.4.7"
edition = "2021"
description = "The LLM-native shell"
repository = "https://github.com/aetherwing-io/mish"
homepage = "https://ohitsmish.com"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "poll"] }
vte = "0.13"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
zstd = "0.13.3"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3.4.0"
tempfile = "3"
